[package]
name = "secretstore"
version = "0.2.2"
description = "Store a secret (such as a private key) in an encrypted file"
license = "MIT"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.16.0"
hex-conservative = "0.3.0"
rand = "0.9.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
zeroize = "1.8.1"
