[package]
name = "secretstore"
version = "0.3.4"
description = "Store a secret (such as a private key) in an encrypted file"
license = "MIT"
edition = "2021"

[dependencies]
bitcoin_hashes = "0.16.0"
chacha20poly1305 = "0.10.1"
hex-conservative = "0.3.0"
rand = "0.9.0"
rand_core = { version = "0.6.4", features = ["getrandom"] }
scrypt = "0.11.0"
zeroize = "1.8.1"
