[package]
name = "seedstore"
version = "0.3.0"
description = "Store bitcoin secret material (BIP39 mnemonic entropy, or similar) in an encrypted file"
license = "MIT"
edition = "2021"

[dependencies]
bip39 = { version = "2.1.0", features = ["zeroize"] }
bitcoin = "0.32.5"
secretstore = { version = "0.3.0", path = "../secretstore" }
zeroize = "1.8.1"

[dev-dependencies]
hex-conservative = "0.3.0"
rand = "0.9.0"
