[package]
name = "seedstore"
version = "0.3.3"
description = "Store bitcoin secret material (BIP39 mnemonic entropy, or similar) in an encrypted file"
license = "MIT"
edition = "2021"

[features]
default = []
# Allow direct access to secret material
accesssecret = []
# Helpers for seedstore-tool
toolhelper = []

[dependencies]
bip39 = { version = "2.1.0", features = ["zeroize"] }
bitcoin = "0.32.5"
secretstore = { version = "0.3.3", path = "../secretstore" }
zeroize = "1.8.1"

[dev-dependencies]
hex-conservative = "0.3.0"
rand = "0.9.0"
