[package]
name = "seedstore"
version = "1.1.1"
description = "Store bitcoin secret material (BIP39 mnemonic entropy, or similar) in an encrypted file"
license = "MIT"
edition = "2021"

[features]
default = []
# Allow direct access to secret material
accesssecret = []
# Nostr/nsec store
nostr = ["bech32"]
# Helpers for seedstore-tool
toolhelper = ["rpassword"]

[dependencies]
bech32 = { version = "0.9", optional = true }
bip39 = { version = "2.1.0", features = ["zeroize"] }
bitcoin = "0.32.5"
rpassword = { version = "7.4.0", optional = true }
secretstore = { path = "../secretstore" }
zeroize = "1.8.1"

[dev-dependencies]
hex-conservative = "0.3.0"
rand = "0.9.0"
